--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "readline": "^1.3.0",
-    "showdown": "^1.9.0"
+    "showdown": "^1.9.0",
+    "mem": ">=4.0.0"
   }
 }
